syntax = "proto3";

package hurtlocker.api.origins.response;
option go_package = "github.com/chuckleheads/hurtlocker/components/builder-gateway/api/origins/response";

message Origin {
    string id = 1;
    string name = 2;
    string default_package_visibility = 3;
}

message Origins {
    repeated Origin origins = 1;
}

message OriginResp {
    Origin origin = 1;
}
